<resources>
    <string name="app_name">OnePass</string>
    <string name="app_bar_search_title">Search</string>
    <string name="button_unlock_title">Unlock</string>
    <string name="button_copy_username_title">Copy username</string>
    <string name="button_copy_password_title">Copy password</string>
    <string name="register_button_submit_title">Submit</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>

    <string name="no_result">No data!</string>

    <string name="unlock_input_token_hint">Input unlock token</string>
    <string name="register_input_token_hint">Input unlock token</string>
    <string name="register_description">First use, you must set an unlock token. Please remember it!</string>
    <string name="wifi_off_tips">Your device doesn\'t connect wifi</string>
    <string name="search_input_hint">Search...</string>
    
    <string name="pull_up_load_more">Pull up to load more</string>
    <string name="loading_more">Loading more...</string>
    <string name="no_more">There is no more data</string>

    <string name="welcome">Welcome!</string>
</resources>
