<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/drawer_item_level_1"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/level_1" />
        <item
            android:id="@+id/drawer_item_level_2"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/level_2" />
        <item
            android:id="@+id/drawer_item_level_3"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/level_3" />
    </group>

</menu>
